CHANGES
=======

* Even more unit tests
* Adds some unit tests
* Adds appveyor badge to readme
* Restoring old appveyor.yml
* Trying out a new appveyor.yml file
* Adds other python versions for travis and tox
* Travis
* Adds a tox.ini file
* update appveyor.yml
* Adds appveyor.yml to test on windows
* Adds version line to docs

2.0.2
-----

* Extracts main to main method so package will work

2.0.1
-----

* Removes old code and old data from docs

2.0.0
-----

* Adds backup and restore functionality
* Adds some validation
* Adds connect functionality
* Adds travis badge and turns off emails for travis
* Adds .travis.yml
* More stuff
* Whole lot of stuff (my commit message quality is declining rapidly)
* Adds a basic Junc class
* Adds a test for junc before class based rewrite (ugh)
* Few small edits
* Adds unit tests for storage module
* Doc edits

1.0.0
-----

* Removes the word nigga
* Final doc edit
* Fixes embeded image in docs
* Fixes some typos in the docs
* Removes "short for" line in readme
* Makes readme link to docs and removes superfluous stuff
* Adds more in depth documentation
* Adds autogenerated AUTHORS and changelog file

0.3.0
-----

* Integrates pbr
* Extracts main actions to their own methods
* Adds some docstrings
* Re organize some shit
* Updates readme

0.2.4
-----

* Cleans up some bugs
* A few finishing touches
* Adds restore function
* Fixes message when server lsit is empty
* Adds a small dose of freedom (adds MIT license)
* Moves some stuff around
* Imrpovements (too drunk to write a good message)
* adds json options for list command
* Bump version #
* Adds backup functionality
* Some small updates
* Adds new location shit
* Adds connection functionality
* Adds remove functionality
* Adds table and adding functionality
* Adds basic shit
* Rearranges some shit
* Commit before coversion (fuck click)
* Initial commit