@@ -5,13 +5,18 @@
       "command": "pytest",
       "args": [
         "--cov=junc/",
-        "--cov-report=html",
-        "junc/tests/test_junc.py"
+        "--cov-report=html"
       ],
       "group": {
         "kind": "test",
         "isDefault": true
       }
+    },
+    {
+      "label": "Tox",
+      "type": "shell",
+      "command": "tox",
+      "problemMatcher": []
     }
   ]
 }
